# src/main/java/vinicius/cornieri/lets/code/challenge/domain/model/Player.java
@@ -4,6 +4,9 @@ import lombok.Getter;
 import lombok.Setter;
 import lombok.ToString;
 
+import java.util.ArrayList;
+import java.util.List;
+
 import javax.persistence.CascadeType;
 import javax.persistence.Column;
 import javax.persistence.Entity;
@@ -12,6 +15,7 @@ import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
 import javax.persistence.JoinColumn;
+import javax.persistence.OneToMany;
 import javax.persistence.OneToOne;
 
 @Entity
@@ -30,14 +34,26 @@ public class Player {
     @ToString.Exclude
     private Game currentGame;
 
-    @Column(name = "NICKNAME", nullable = false)
-    private String nickname;
+    @Column(name = "USERNAME", nullable = false)
+    private String username;
 
-    @Column(name = "API_KEY", nullable = false)
-    private String apiKey;
+    @Column(name = "PASSWORD", nullable = false)
+    private String password;
 
     @Column(name = "SCORE", nullable = false)
     private int score = 0;
+
+    @OneToMany(mappedBy="player", cascade = {CascadeType.ALL}, fetch = FetchType.EAGER)
+    @ToString.Exclude
+    private List<PlayerRole> roles;
+
+    public void addNewRole(String role) {
+        if (roles == null) {
+            roles = new ArrayList<>();
+        }
+
+        roles.add(new PlayerRole(this, role));
+    }
 
     public void incrementScore(int byNewScore) {
         this.score += byNewScore;
