# src/main/java/vinicius/cornieri/lets/code/challenge/domain/service/mapper/CurrentGameResponseDtoMapper.java
@@ -1,5 +1,6 @@
 package vinicius.cornieri.lets.code.challenge.domain.service.mapper;
 
+import liquibase.pro.packaged.M;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.factory.Mappers;
@@ -11,6 +12,7 @@ public interface CurrentGameResponseDtoMapper {
 
     CurrentGameResponseDtoMapper INSTANCE = Mappers.getMapper( CurrentGameResponseDtoMapper.class );
 
+    @Mapping(target = "player", source = "game.player.username")
     @Mapping(target = "round", source = "currentRound")
     CurrentGameResponseDto fromGame(Game game);
 }
